--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <a class="navbar-brand" href="#"><img
+        <a class="navbar-brand" href="https://ishan0071.github.io/CyberKavach_home/"><img
                 src="https://dewey.tailorbrands.com/production/brand_version_mockup_image/285/3619558285_d381ab3d-7056-42b0-b28c-45e5ada65b45.png?cb=1598620132"
                 alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="https://ishan0071.github.io/CyberKavach_home/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"></a>
