--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                     <a class="nav-link" href="#">Get our app</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="About_us.html">About us</a>
+                    <a class="nav-link" href="#">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Contact_us.html">Contact us</a>
+                    <a class="nav-link" href="#">Contact us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
