--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                         Categories
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <h6 class="dropdown-header">Information</h6>
-                        <a class="dropdown-item" href="Games.html">kuch daalna hai</a>
+                        <h6 class="dropdown-header">Informative</h6>
+                        <a class="dropdown-item" href="#">kuch daalna hai</a>
                         <a class="dropdown-item" href="#">Videos on Cyber Safety</a>
                         <div class="dropdown-divider"></div>
                         <h6 class="dropdown-header">Fun Zone</h6>
-                        <a class="dropdown-item" href="Games.html">Cyber Safety Games</a>
-                        <a class="dropdown-item" href="Quiz.html">Cyber Safety Quizzes</a>  
+                        <a class="dropdown-item" href="#">Cyber Safety Games</a>
+                        <a class="dropdown-item" href="#">Cyber Safety Quizzes</a>  
                     </div>
                 </li>
                 <li class="nav-item">
